也没干什么，就是想commit

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"/>
-    <androidx.fragment.app.FragmentTabHost
+    <com.example.java_wanandroid.Custom.CustomNav
         android:id="@+id/fragment_tab_host"
         android:layout_width="match_parent"
         android:layout_height="50dp"/>
