完善了bottom nav 打算特别分离出来

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -54,6 +54,7 @@
         app:tabSelectedTextColor="@color/colorAccent"
         app:tabTextColor="#fff"
         android:visibility="gone"
+        app:tabMode="scrollable"
         tools:visibility="visible"/>
 
     <androidx.viewpager.widget.ViewPager
